@@ -20,4 +20,5 @@ This project demonstrates calling a native Rust function from Java using the For
 cargo build --release --manifest-path rust-lib/Cargo.toml
 ```
 
-### 2. Build and run the Java application using Maven
+### 2. Build and run the Java application using Maven 
+still need to add VM flag for running <b>--enable-native-access=com.me.rust<b>
